--- a/fontend/package.json
+++ b/fontend/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angular-6-social-login": "^1.1.1",
     "angular-google-charts": "^0.1.3",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.5.0",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
     "apollo-link": "^1.2.11",
+    "apollo-link-context": "^1.0.17",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartist": "^0.11.0",
