--- a/fontend/package.json
+++ b/fontend/package.json
@@ -24,10 +24,12 @@
     "angular-google-charts": "^0.1.3",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.5.0",
+    "apollo-boost": "^0.3.1",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
     "apollo-link": "^1.2.11",
     "apollo-link-context": "^1.0.17",
+    "apollo-link-error": "^1.1.10",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartist": "^0.11.0",
